--- a/Akademia_PWSW/VIA/via.tex
+++ b/Akademia_PWSW/VIA/via.tex
@@ -48,7 +48,7 @@
 
     \section*{Wejście}
     
-    W pierwszym wierszu standardowego wejścia znajdują się dwie liczby całkowite $n$ i $m$, oznaczające liczbę odcinków via ferraty i liczbę śmiałków. W drugim wierszu znajduje się ciąg $n$ liczb całkowitych $d_{1}, d_{2}, \ldots, d_{n}$ $(1 \leq d_{i} \leq 10^{9})$, gdzie $d_{i}$ oznacza stopień trudności $i$-tego odcinka drogi. W trzecim wierszu znajduje się $m$ liczb całkowitych $w_{1}, w_{2}, \ldots, w_{m}$ $(1 \leq w_{i} \leq 10^{9})$, gdzie $w_{i}$ oznacza poziom zaawansowania $i$-tego wspinacza.
+    W pierwszym wierszu standardowego wejścia znajdują się dwie liczby całkowite $n$ i $m$ $(1 \leq n, m \leq 10^{5})$, oznaczające liczbę odcinków via ferraty i liczbę śmiałków. W drugim wierszu znajduje się ciąg $n$ liczb całkowitych $d_{1}, d_{2}, \ldots, d_{n}$ $(1 \leq d_{i} \leq 10^{9})$, gdzie $d_{i}$ oznacza stopień trudności $i$-tego odcinka drogi. W trzecim wierszu znajduje się $m$ liczb całkowitych $w_{1}, w_{2}, \ldots, w_{m}$ $(1 \leq w_{i} \leq 10^{9})$, gdzie $w_{i}$ oznacza poziom zaawansowania $i$-tego wspinacza.
 
 %WYJSCIE
 
@@ -84,9 +84,11 @@
             \hline
             \textbf{Podzadanie} & \textbf{Warunki} & \textbf{Liczba punktów}\\
             \hline
-            1 & $1 \leq n, m \leq 1000$ & 30\\
+            1 & $1 \leq n, m \leq 1000$ & 25\\
             \hline
-            2 & $1 \leq n, m \leq 100000$ & 70\\
+            2 & $w_{i}\geq w_{j}$, dla każdej pary $i$, $j$, gdzie $i < j$ & 25\\
+            \hline
+            3 & brak dodatkowych ograniczeń & 50\\
             \hline
         \end{tabular}
     \end{center}
