--- a/Akademia_PWSW/OSP/osp.tex
+++ b/Akademia_PWSW/OSP/osp.tex
@@ -10,8 +10,7 @@
 \usepackage{pdfpages}
 \DeclareGraphicsRule{.1}{mps}{*}{}
 \usepackage{epstopdf}
-
-% \newcommand{\hint}[2]{\begin{flushleft}\textbf{\ref{#1}}\quad #2\end{flushleft}}
+\usepackage{wrapfig}
 
 \usepackage{geometry}
 \geometry{a4paper, margin=2cm}
@@ -70,6 +69,10 @@
     
     \vspace{2ex}
     \noindent\textbf{Wyjaśnienie przykładu:} Największą odległość do pierwszego pożaru tj. 3 bajtomatry musi przebyć pierwszy zastęp. Największą odległość do drugiego pożaru tj. 6 bajtometrów muszą pokonać strażacy z trzeciego zastępu. Największą odległość do trzeciego pożaru tj. 4 bajtometry musi przejechać drugi zastęp strażaków. Największą odległość do czwartego pożaru tj. 3 bajtometry muszą przebyć strażacy z zastępu drugiego i trzeciego.
+    \vspace{2ex}
+    \begin{center}
+        \includegraphics{osprys-1.pdf}
+    \end{center}
     
 %OCENIANIE
 
