--- a/Akademia_PWSW/WIE/wie.tex
+++ b/Akademia_PWSW/WIE/wie.tex
@@ -68,6 +68,11 @@
         \texttt{9}
     \end{minipage}
     
+    \vspace{-5em}
+    \begin{center}
+        \includegraphics{wierys-1.pdf}
+    \end{center}
+    
 %OCENIANIE
 
     \section*{Ocenianie}
