--- a/Akademia_PWSW/WIR/wir.tex
+++ b/Akademia_PWSW/WIR/wir.tex
@@ -70,7 +70,10 @@
         \texttt{1}
     \end{minipage}
     
-    \vspace{2ex}
+    \vspace{-10ex}
+    \begin{center}
+        \includegraphics{wirrys-1.pdf}
+    \end{center}
     \noindent\textbf{Wyjaśnienie przykładu:} Bitek może odciąć połączenie pomiędzy serwerami numer 3 i 5 lub 2 i 3.
     
 %OCENIANIE
