--- a/Akademia_PWSW/STR/str.tex
+++ b/Akademia_PWSW/STR/str.tex
@@ -68,6 +68,11 @@
         \texttt{4\\4 5 6\\2 -1 3\\2 1 2\\5 4 7}
     \end{minipage}
     
+    \vspace{-2em}
+    \begin{center}
+        \includegraphics{strrys-1.pdf}
+    \end{center}
+    
 %OCENIANIE
 
     \section*{Ocenianie}
