Added KOL tests

--- a/Akademia_PWSW/KOL/kol.tex
+++ b/Akademia_PWSW/KOL/kol.tex
@@ -38,7 +38,7 @@
 %TRESC
     
     \noindent
-    Właściciel jednej z najznakomitszych restauracji w całej Bajtocji musi zadbać o każdy szczegół (kwiaty, świece, wystrój), aby jego goście byli zadowoleni. W ciągu najbliższych $m$ dni w restauracji odbędą się romantyczne kolacje przy świecach. Dla każdej rezerwacji właściciel wie, ile świec będzie musiał zapalić, a dzięki swojemu długoletniemu doświadczeniu wie, że każda świeca w czasie takiej kolacji spala się o jedną jednostkę wysokości.
+    Właściciel jednej z najznakomitszych restauracji w całej Bajtocji musi zadbać o każdy szczegół, aby jego goście byli zadowoleni. W ciągu najbliższych $m$ dni w restauracji odbędą się romantyczne kolacje przy świecach. Dla każdej rezerwacji właściciel wie, ile świec będzie musiał zapalić, a dzięki swojemu długoletniemu doświadczeniu wie, że każda świeca w czasie takiej kolacji spala się o jedną jednostkę wysokości.
     
     Znając zestaw świec jakie posiada właściciel i wymagania gości odnośnie każdej kolacji określ na ile wieczorów wystarczy posiadany przez właściciela zestaw.
 
