Improved top bar info

--- a/Akademia_PWSW/OSP/osp.tex
+++ b/Akademia_PWSW/OSP/osp.tex
@@ -25,13 +25,13 @@
     \end{minipage}
     \begin{minipage}{0.5\textwidth}
         \begin{flushright}
-            \includegraphics[height=1.5cm]{logo.png}
+            \includegraphics[height=1.5cm]{logo.jpg}
         \end{flushright}
     \end{minipage}
     
     \noindent\rule{\textwidth}{0.4pt}
     
-    \noindent\textbf{Akademia Programowania PWSW, dzień ?, Dostępna pamięć: 128 MB.}
+    \noindent\textbf{Akademia Programowania PWSW, dzień III, Dostępna pamięć: 128 MB.}
     \vspace{1em}
     
 %TRESC
