--- a/Akademia_PWSW/VIA/via.tex
+++ b/Akademia_PWSW/VIA/via.tex
@@ -11,8 +11,6 @@
 \DeclareGraphicsRule{.1}{mps}{*}{}
 \usepackage{epstopdf}
 
-% \newcommand{\hint}[2]{\begin{flushleft}\textbf{\ref{#1}}\quad #2\end{flushleft}}
-
 \usepackage{geometry}
 \geometry{a4paper, margin=2cm}
 
@@ -26,13 +24,13 @@
     \end{minipage}
     \begin{minipage}{0.5\textwidth}
         \begin{flushright}
-            \includegraphics[height=1.5cm]{logo.png}
+            \includegraphics[height=1.5cm]{logo.jpg}
         \end{flushright}
     \end{minipage}
     
     \noindent\rule{\textwidth}{0.4pt}
     
-    \noindent\textbf{Akademia Programowania PWSW, dzień ?, Dostępna pamięć: 128 MB.}
+    \noindent\textbf{Akademia Programowania PWSW, dzień I, Dostępna pamięć: 128 MB.}
     \vspace{1em}
     
 %TRESC
