--- a/Akademia_PWSW/KOT/kot.tex
+++ b/Akademia_PWSW/KOT/kot.tex
@@ -11,8 +11,6 @@
 \DeclareGraphicsRule{.1}{mps}{*}{}
 \usepackage{epstopdf}
 
-% \newcommand{\hint}[2]{\begin{flushleft}\textbf{\ref{#1}}\quad #2\end{flushleft}}
-
 \usepackage{geometry}
 \geometry{a4paper, margin=2cm}
 
@@ -26,13 +24,13 @@
     \end{minipage}
     \begin{minipage}{0.5\textwidth}
         \begin{flushright}
-            \includegraphics[height=1.5cm]{logo.png}
+            \includegraphics[height=1.5cm]{logo.jpg}
         \end{flushright}
     \end{minipage}
     
     \noindent\rule{\textwidth}{0.4pt}
     
-    \noindent\textbf{Akademia Programowania PWSW, dzień ?, Dostępna pamięć: 512 MB.}
+    \noindent\textbf{Akademia Programowania PWSW, dzień I, Dostępna pamięć: 512 MB.}
     \vspace{1em}
     
 %TRESC
@@ -67,12 +65,7 @@
         poprawnym wynikiem jest:\vspace{1ex}\\
         \texttt{0 1 2\\4 0 0\\2 0 0}
     \end{minipage}
-    
-    %\vspace{1.5em}
-    %\noindent\textbf{Testy ,,ocen":}\vspace{.5ex}
-    
-    %\texttt{\textbf{1ocen:}} $n$ = 5, $m$ = 6; odpowiedź to 4;\vspace{.5ex}
-    
+
 %OCENIANIE
 
     \section*{Ocenianie}
