--- a/Akademia_PWSW/LNG/lng.tex
+++ b/Akademia_PWSW/LNG/lng.tex
@@ -11,8 +11,6 @@
 \DeclareGraphicsRule{.1}{mps}{*}{}
 \usepackage{epstopdf}
 
-% \newcommand{\hint}[2]{\begin{flushleft}\textbf{\ref{#1}}\quad #2\end{flushleft}}
-
 \usepackage{geometry}
 \geometry{a4paper, margin=2cm}
 
@@ -26,13 +24,13 @@
     \end{minipage}
     \begin{minipage}{0.5\textwidth}
         \begin{flushright}
-            \includegraphics[height=1.5cm]{logo.png}
+            \includegraphics[height=1.5cm]{logo.jpg}
         \end{flushright}
     \end{minipage}
     
     \noindent\rule{\textwidth}{0.4pt}
     
-    \noindent\textbf{Akademia Programowania PWSW, dzień ?, Dostępna pamięć: 128 MB.}
+    \noindent\textbf{Akademia Programowania PWSW, dzień III, Dostępna pamięć: 128 MB.}
     \vspace{1em}
     
 %TRESC
@@ -70,11 +68,6 @@
     
     \vspace{2ex}
     \noindent\textbf{Wyjaśnienie przykładu:} Tęczowe przedziały to: [1, 1], [1, 2], [1, 3] i [2, 3]. 
-    
-    %\vspace{1.5em}
-    %\noindent\textbf{Testy ,,ocen":}\vspace{.5ex}
-    
-    %\texttt{\textbf{1ocen:}} $n$ = 5, $m$ = 6; odpowiedź to 4;\vspace{.5ex}
     
 %OCENIANIE
 
