Fixed typo in JAP EN statement

--- a/Akademia_PWSW/JAP/jap_EN.tex
+++ b/Akademia_PWSW/JAP/jap_EN.tex
@@ -47,7 +47,7 @@
 
     \section*{Input}
     
-    The first line of the standard input contains an integer $n$ $(1\leq n\leq 2000000)$, the number of trees in the garden. Each of next $n$ lines contains a position of a tree. It consists of two space-separated integers $x_{i}$ and $y_{i}$ $(1\leq x_{i}, y_{i}\leq 10^{6})$ which represent the \texttt{x} and \texttt{y} coordinate of the $i$-th tree (obviously there is at most one tree at each $(x, y)$\,-\,coordinate).
+    The first line of the standard input contains an integer $n$ $(1\leq n\leq 200000)$, the number of trees in the garden. Each of next $n$ lines contains a position of a tree. It consists of two space-separated integers $x_{i}$ and $y_{i}$ $(1\leq x_{i}, y_{i}\leq 10^{6})$ which represent the \texttt{x} and \texttt{y} coordinate of the $i$-th tree (obviously there is at most one tree at each $(x, y)$\,-\,coordinate).
 
 %WYJSCIE
 
